--- a/package.json
+++ b/package.json
@@ -24,16 +24,19 @@
     "engines": {
         "node": ">= 0.8.0"
     },
-    "main": "./tasks/config_options.js",
+    "main": "index.js",
     "scripts": {
-        "test": "grunt test"
+        "test": "grunt test",
+        "coveralls": "jscoverage tasks && GRUNT_CLI_CONFIG_CODE_COVERAGE=1 nodeunit --reporter=lcov test | coveralls"
     },
     "devDependencies": {
         "grunt-contrib-jshint": "^0.10.0",
         "grunt-contrib-copy": "^0.5.0",
         "grunt-contrib-nodeunit": "^0.3.3",
         "grunt-complexity": "~0.1.51",
-        "grunt": "~0.4.4"
+        "grunt": "~0.4.4",
+        "jscoverage": "^0.3.8",
+        "coveralls": "^2.10.0"
     },
     "peerDependencies": {
         "grunt": "~0.4.4"
