--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "grunt-contrib-nodeunit": "^0.3.3",
         "grunt-complexity": "~0.1.51",
         "grunt": "~0.4.4",
+        "nodeunit": "~0.8.6",
         "jscoverage": "^0.3.8",
         "coveralls": "^2.10.0"
     },
